// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for MonitoredServiceCategory Ensure application typee is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory application"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary8"
        data-icon="dashboard"
      >
        <svg
          height="13"
          viewBox="0 0 16 16"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.656 2H14v4H8.656zm0 12V7.344H14V14zM2 14v-4h5.344v4zm0-5.344V2h5.344v6.656z"
            fill="#fff"
            opacity="0.691"
          />
        </svg>
      </span>
      Application
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure infra type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory infrastructure"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-purple500"
        data-icon="infrastructure"
      >
        <svg
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.543 5.377L8 2.755 3.458 5.377v5.246L8 13.245l4.543-2.622V5.377zM8.5 1.89a1 1 0 00-1 0L2.958 4.51a1 1 0 00-.5.866v5.246a1 1 0 00.5.866L7.5 14.11a1 1 0 001 0l4.543-2.622a1 1 0 00.5-.866V5.377a1 1 0 00-.5-.866L8.5 1.89z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M10.233 6.71L8 5.422l-2.233 1.29V9.29L8 10.58l2.233-1.29V6.711zM8.5 4.556a1 1 0 00-1 0l-2.233 1.29a1 1 0 00-.5.866V9.29a1 1 0 00.5.866l2.233 1.29a1 1 0 001 0l2.233-1.29a1 1 0 00.5-.866V6.711a1 1 0 00-.5-.866L8.5 4.555z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      Infrastructure
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure null type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  />
</div>
`;
